...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rfb-VO-nGc">
                                <rect key="frame" x="263" y="46" width="96" height="21"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="egI-be-0J2"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="+ ADD TASK"/>
                                <connections>
                                    <action selector="addTask:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fHC-as-C08"/>
                                </connections>
                            </button>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fBC-V5-eEq">
                                <rect key="frame" x="16" y="90" width="343" height="557"/>
...
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="gex-aq-hmv"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="V8U-rz-fdR"/>
                                </connections>
                            </tableView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add Task Here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z1E-8f-gtU">
                                <rect key="frame" x="16" y="41" width="239" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="239" id="PL6-Q6-U51"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
